--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -1,126 +1,107 @@
-.darkBG {
-  background-color: rgba(0, 0, 0, 0.2);
+.modal--background {
   width: 100vw;
   height: 100vh;
-  z-index: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+  position: absolute;
   top: 50%;
   left: 50%;
+  z-index: 0;
   transform: translate(-50%, -50%);
-  position: absolute;
 }
-
-.centered {
+.modal {
+  background: white;
   position: fixed;
   top: 50%;
   left: 50%;
+  box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.04);
+  border-radius: 12px;
+  z-index: 2;
+  padding: 20px;
   transform: translate(-50%, -50%);
 }
-
-.modal {
-  width: 250px;
-  height: 170px;
-  background: white;
-  color: white;
-  z-index: 10;
-  border-radius: 16px;
-  box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.04);
-}
-
-.modalHeader {
-  height: 50px;
-  background: white;
-  overflow: hidden;
-  border-top-left-radius: 16px;
-  border-top-right-radius: 16px;
-}
-
-.heading {
-  margin: 0;
-  padding: 10px;
-  color: #2c3e50;
-  font-weight: 500;
-  font-size: 18px;
-  text-align: center;
-}
-
-.modalContent {
-  padding: 10px;
-  font-size: 14px;
-  color: #2c3e50;
-  text-align: center;
-}
-
-.modalActions {
-  position: absolute;
-  bottom: 2px;
-  margin-bottom: 10px;
-  width: 100%;
-}
-
-.actionsContainer {
+.modal__header {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+.modal__heading {
+  text-align: center;
+}
+.modal__button--close {
+  width: 26px;
+  height: 26px;
+  font-size: 20px;
+  background: rgb(236, 236, 236);
+  display: flex;
+  justify-content: center;
   align-items: center;
-}
-
-.closeBtn {
-  cursor: pointer;
-  font-weight: 500;
-  padding: 4px 8px;
+  border: none;
   border-radius: 8px;
-  border: none;
-  font-size: 18px;
-  color: #2c3e50;
-  background: white;
-  transition: all 0.25s ease;
-  box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.06);
-  position: absolute;
-  right: 0;
-  top: 0;
-  align-self: flex-end;
-  margin-top: -7px;
-  margin-right: -7px;
-}
-
-.closeBtn:hover {
-  box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.04);
-  transform: translate(-4px, 4px);
-}
-
-.deleteBtn {
-  margin-top: 10px;
   cursor: pointer;
-  font-weight: 500;
-  padding: 11px 28px;
-  border-radius: 12px;
-  font-size: 0.8rem;
+}
+.modal__form {
+  min-width: 500px;
+  min-height: 400px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+.modal__form--title {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+.modal__form--title input {
+  width: 100%;
+  height: 30px;
+  font-size: 1rem;
+  margin: 5px 0;
+  border: 2px solid gray;
+  border-radius: 5px;
+}
+.modal__form--type {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+.modal__form--type select {
+  width: 100%;
+  height: 30px;
+  font-size: 1rem;
+  margin: 5px 0;
+  border: 2px solid gray;
+  border-radius: 5px;
+}
+.modal__form--description {
+  display: flex;
+  flex-direction: column;
+}
+.modal__form--description textarea {
+  width: 100%;
+  height: 60px;
+  font-size: 1rem;
+  margin: 5px 0;
+  border: 2px solid gray;
+  border-radius: 5px;
+}
+.modal__actions {
+  display: flex;
+  justify-content: flex-end;
+}
+.modal__button {
+  width: 5rem;
+  height: 2rem;
   border: none;
+  border-radius: 12px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+.modal__button--cancel {
+  background: #e6e6e6;
+  margin-right: 5px;
+}
+.modal__button--share {
+  background: #074ee8;
   color: #fff;
-  background: #ff3e4e;
-  transition: all 0.25s ease;
-}
-
-.deleteBtn:hover {
-  box-shadow: 0 10px 20px -10px rgba(255, 62, 78, 0.6);
-  transform: translateY(-5px);
-  background: #ff3e4e;
-}
-
-.cancelBtn {
-  margin-top: 10px;
-  cursor: pointer;
-  font-weight: 500;
-  padding: 11px 28px;
-  border-radius: 12px;
-  font-size: 0.8rem;
-  border: none;
-  color: #2c3e50;
-  background: #fcfcfc;
-  transition: all 0.25s ease;
-}
-
-.cancelBtn:hover {
-  box-shadow: none;
-  transform: none;
-  background: whitesmoke;
 }
