--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -5,5 +5,9 @@
   flex-direction: column;
 }
 .main {
+  height: 100%;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
   margin: 20px auto;
 }
